--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webstas_lvl1",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "description": "My first frontend project",
   "main": "index.js",
   "scripts": {
@@ -29,8 +29,11 @@
   },
   "bin": {
     "brain-games": "dist/bin/brain-games.js"
-   },
-   "files": [
+  },
+  "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "readline-sync": "^1.4.9"
+  }
 }
