--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webstas_lvl1",
-  "version": "1.2.0",
+  "version": "1.4.0",
   "description": "My first frontend project",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -21,7 +21,8 @@
   },
   "homepage": "https://github.com/franticstas/project-lvl1-s438#readme",
   "bin": {
-    "brain-games": "dist/bin/brain-games.js"
+    "brain-games": "dist/bin/brain-games.js",
+    "brain-even": "dist/bin/brain-even.js"
   },
   "files": [
     "dist"
