--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webstas_lvl1",
-  "version": "1.5.4",
+  "version": "1.6.0",
   "description": "My first frontend project",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -23,7 +23,8 @@
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
     "brain-even": "dist/bin/brain-even.js",
-    "brain-calc": "dist/bin/brain-calc.js"
+    "brain-calc": "dist/bin/brain-calc.js",
+    "brain-gcd": "dist/bin/brain-gcd.js"
   },
   "files": [
     "dist"
